--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
 flask
-python-dotenv
-
-Django
-django-allauth
-
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-requests
+gspread >= 5.11.0
+oauth2client
