--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,26 @@
-flask
-gspread >= 5.11.0
-oauth2client
+blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+Flask==3.0.3
+google-auth==2.35.0
+google-auth-oauthlib==1.2.1
+gspread==5.11.3
+httplib2==0.22.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.1
+oauth2client==4.1.3
+oauthlib==3.2.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pyparsing==3.2.0
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+six==1.16.0
+urllib3==2.2.3
+Werkzeug==3.0.4
+wheel==0.44.0
